--- a/TestHero/ClientApp/src/Pages/Invitacion/invitacion.module.css
+++ b/TestHero/ClientApp/src/Pages/Invitacion/invitacion.module.css
@@ -42,6 +42,7 @@
 /* INFO CONTAINER */
 .info-container {
     margin-top: 20px;
+    color: #ebebeb;
     display: flex;
     flex-direction: column;
     row-gap: 55px;
@@ -55,7 +56,7 @@
     justify-content: center;
     align-items: center;
     width: 400px;
-    height: 50px;
+    height: 60px;
     margin: 0 auto;
     color: #1d1d1d;
     border-radius: 5px;
@@ -74,6 +75,7 @@
 
 .btn-link {
     color: #ebebeb;
+    margin: 0;
 }
 
 .btn-link:hover{
