--- a/TestHero/ClientApp/src/Pages/crearExamen/crearExamen.module.css
+++ b/TestHero/ClientApp/src/Pages/crearExamen/crearExamen.module.css
@@ -1,6 +1,6 @@
 
 .CrearExamen {
-  max-width: 700px;
+  max-width: 800px;
   margin: 0 auto;
   padding: 20px;
   border-radius: 5px;
@@ -41,7 +41,7 @@
 .tagDatalist {
   max-height: 8em;
   overflow: hidden;
-  position: absolute;
+  /* position: absolute; */
   border: 0 none;
   color: green;
 }
