--- a/TestHero/ClientApp/src/Pages/resumenExamen/resumenexamen.module.css
+++ b/TestHero/ClientApp/src/Pages/resumenExamen/resumenexamen.module.css
@@ -1,60 +1,80 @@
 .page {
     background-color: #1d1d1d;
     width: 100vw;
-  }
+}
   
-  .content {
+.content {
     margin-left: 12%;
-  }
+}
   
-  .tituloExamen {
-      display: flex;
-      align-items: center;
-      color: #ebebeb;
-      font-style:bold;
-      font-size: 40px;
-      margin-bottom: 1px;
-  }
+.tituloExamen {
+    display: flex;
+    align-items: center;
+    color: #ebebeb;
+    font-style:bold;
+    font-size: 40px;
+    margin-bottom: 1px;
+}
   
-  .title-row {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      margin-right: 20px;
-      margin-bottom: 20px;
-      margin-top: 30px;
-  }
+.title-row {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-right: 20px;
+    margin-bottom: 20px;
+    margin-top: 30px;
+}
   
-  .input-row {
-      display: flex;
-      align-items: center;
-      gap: 10px;
-      width: 400px;
-  }
+.input-row {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    width: 400px;
+}
   
-  .input-text {
-      padding: 5px;
-  }
+.input-text {
+    padding: 5px;
+}
   
-  .copy-button {
-      padding: 8px 16px;
-      font-size: 16px;
-      background-color: #0596ff;
-      color: #ebebeb;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-  }
+.copy-button {
+    padding: 8px 16px;
+    font-size: 16px;
+    background-color: #0596ff;
+    color: #ebebeb;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
   
-      .input-text:hover,
-      .copy-button:hover {
-          background-color: #046db8;
-      }
-  
-.subtitle{
+.input-text:hover,
+.copy-button:hover {
+    background-color: #046db8;
+}
+
+.subtitles {
+    display: flex;
+    justify-content: space-between;
+    margin-right: 80px;
+}
+
+.subtitles button {
+    margin-top: 20px;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: none;
+    background-color: #0596ff;
+    color: #ebebeb;
+    font-size: 18px;
+    font-weight: 500;
+    border-radius: 10px;
+    padding: 10px 20px;
+}
+
+.subtitle {
     color: #ebebeb;
     margin-top: 30px;
     margin-bottom: 30px;
-}
-  
+} 
   
