--- a/TestHero/ClientApp/src/components/preguntaAlumno/preguntaAlumno.module.css
+++ b/TestHero/ClientApp/src/components/preguntaAlumno/preguntaAlumno.module.css
@@ -9,6 +9,7 @@
   margin-bottom: 0px;
   padding: 10px;
   z-index: 1;
+  width: 70vw;
 }
 
 .titulo {
@@ -24,8 +25,7 @@
 
 .pregIcon:hover {
   cursor: pointer;
-  color:rgb(207, 207, 207);
-
+  color: rgb(207, 207, 207);
 }
 
 .pregunta {
@@ -42,6 +42,7 @@
   border-radius: 5px;
   padding: 10px;
   width: 100%;
+  width: 70vw;
 }
 
 .showing {
