--- a/TestHero/ClientApp/src/Pages/resumenExamen/resumenexamen.module.css
+++ b/TestHero/ClientApp/src/Pages/resumenExamen/resumenexamen.module.css
@@ -1,93 +1,137 @@
 .page {
-    background-color: #1d1d1d;
-    width: 100vw;
+  background-color: #1d1d1d;
+  width: 100vw;
 }
 
 .content {
-    margin-left: 12%;
+  margin-left: 12%;
 }
 
 .tituloExamen {
-    display: flex;
-    align-items: center;
-    color: #ebebeb;
-    font-style: bold;
-    font-size: 40px;
-    margin-bottom: 1px;
+  display: flex;
+  align-items: center;
+  color: #ebebeb;
+  font-style: bold;
+  font-size: 40px;
+  margin-bottom: 1px;
 }
 
 .title-row {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin-right: 20px;
-    margin-bottom: 20px;
-    margin-top: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-right: 20px;
+  margin-bottom: 20px;
+  margin-top: 30px;
 }
 
 .input-row {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    width: 400px;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  width: 400px;
 }
 
 .input-text {
-    padding: 5px;
+  padding: 5px;
 }
 
 .copy-button {
-    padding: 8px 16px;
-    font-size: 16px;
-    background-color: #0596ff;
-    color: #ebebeb;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
+  padding: 8px 16px;
+  font-size: 16px;
+  background-color: #0596ff;
+  color: #ebebeb;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
 }
 
-    .input-text:hover,
-    .copy-button:hover {
-        background-color: #046db8;
-    }
+.input-text:hover,
+.copy-button:hover {
+  background-color: #046db8;
+}
 
 .subtitles {
-    display: flex;
-    justify-content: end;
-    align-items: center;
-    gap: 10px;
+  display: flex;
+  justify-content: space-between;
+  margin-right: 80px;
 }
 
-    .subtitles button {
-        margin-top: 20px;
-        height: 40px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        border: none;
-        background-color: #0596ff;
-        color: #ebebeb;
-        font-size: 18px;
-        font-weight: 500;
-        border-radius: 10px;
-        padding: 10px 20px;
-    }
+.subtitles button {
+  margin-top: 20px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: none;
+  background-color: #0596ff;
+  color: #ebebeb;
+  font-size: 18px;
+  font-weight: 500;
+  border-radius: 10px;
+  padding: 10px 20px;
+}
 
-    .subtitles h2 {
-        color: #ebebeb;
-        margin-top: 30px;
-        margin-bottom: 30px;
-        margin-right:610px;
-        text-align: left;
-    }
-
-    .subtitles > :last-child {
-        margin-right: 40px;
-    }
+.subtitles button:hover {
+  background-color: #046db8;
+}
 
 .subtitle {
-    color: #ebebeb;
-    margin-top: 30px;
-    margin-bottom: 30px;
+  color: #ebebeb;
+  margin-top: 30px;
+  margin-bottom: 30px;
 }
 
+.modaldetalles3 {
+  background-color: #1d1d1d;
+  border: none;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  color: #ebebeb;
+}
+
+.modal-footer {
+  align-items: center;
+  justify-content: space-around;
+}
+
+.modal-dialog {
+  margin-top: 200px;
+}
+
+.botonCancelar2 {
+  margin-top: 30px;
+  margin-bottom: 40px;
+  background-color: #1d1d1d;
+  color: #ebebeb;
+  padding: 10px 20px;
+  border-width: 2px;
+  border-color: #ebebeb;
+  font-size: 24px;
+  box-shadow: 2px 2px rgba(0px, 0px, 0px, 0.24);
+}
+
+.botonCancelar2:hover {
+  transform: scale(0.98);
+  background-color: #464545;
+  box-shadow: 2px 2px rgba(0px, 0px, 0px, 0.24);
+}
+
+.botonEliminar {
+  margin-top: 30px;
+  padding: 10px 20px;
+  margin-bottom: 40px;
+  background-color: #ebebeb;
+  color: #fd4d4d;
+  border-color: #ebebeb;
+  font-size: 24px;
+}
+
+.botonEliminar:hover {
+  cursor: pointer;
+  background-color: #d0d0d0;
+  color: #fd4d4d;
+  transform: scale(0.98);
+  box-shadow: 2px 2px rgba(0px, 0px, 0px, 0.24);
+}
